Bug 977668 - Firefox hangs on Facebook text entry when inline lookups pop up, r=jwei